# rc-plane-design

./: .gitignore  .gitmodules  INSTALL.md  PROJECT_PLAN.md  README.md  install.ps1  install.sh  pyproject.toml  render.yaml
.github/prompts/: continue-project.prompt.md
data/examples/: classic_2m_glider.json  edge540_box_aerobat.json  extra_330sc_3d.json  passive_sport_flyer.json  sport_trainer_40.json  yak55_profile_aerobat.json
data/examples/missions/: aerial_survey.json  aerobat_3d.json  fpv_racer.json  park_flyer.json  thermal_soarer.json
examples/: full_pipeline_demo.py  passive_design_from_assumptions.py  passive_design_gallery.py  smoke_test_loads.py  test_neuralfoil.py
rc_aircraft_design/: __init__.py  passive.py
rc_aircraft_design/aero/: __init__.py  airfoil.py  analysis.py
rc_aircraft_design/cad/: __init__.py  dxf_writer.py
rc_aircraft_design/constraints/: __init__.py  analysis.py
rc_aircraft_design/expand/: __init__.py  unfold.py
rc_aircraft_design/manufacturing/: __init__.py  config.py  export_dxf.py  parts.py
rc_aircraft_design/power/: __init__.py  propulsion.py
rc_aircraft_design/stability/: __init__.py  analysis.py
rc_aircraft_design/utils/: __init__.py  math_helpers.py
rc_aircraft_design/viz/: __init__.py  plot3d.py  renderer.py
rc_aircraft_design/wing/: __init__.py  geometry.py  loads.py
results/examples/: sport_flyer_laser_parts.dxf
results/examples/20260407_201237/: passive_fpv_racer_planform.dxf  passive_park_flyer_planform.dxf  passive_sport_flyer_planform.dxf
results/examples/20260407_204445/: passive_aerial_survey_planform.dxf  (+2 more)
tests/: conftest.py  smoke_test.py  test_aero.py  test_cad.py  test_constraints.py  test_example_planes.py  test_expand.py  test_passive_design.py  test_power.py  test_stability.py  test_utils.py  test_viz.py  test_wing.py
webui/: app.py  pyproject.toml  requirements.txt
webui/assets/: style.css
webui/callbacks/: __init__.py  design.py  stages.py
webui/components/: cards.py  sidebar.py
webui/pages/: aero.py  config.py  constraints.py  export.py  geometry.py  home.py  loads.py  manufacturing.py  power.py  stability.py  workbench.py
