[project]
name = "rc-aircraft-design"
version = "0.1.0"
description = "RC aircraft design & manufacturing: aero analysis, wing geometry, stability, propulsion, 3D viz, and CAD export"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
viz = ["PyOpenGL>=3.1", "PyOpenGL-accelerate>=3.1", "glfw>=2.6"]
cad = ["ezdxf>=0.18"]
julia = ["juliacall>=0.9"]
aero = ["xfoil>=1.1", "aerosandbox>=4.2", "neuralfoil>=0.1"]
webui = ["dash>=4.0", "dash-bootstrap-components>=2.0", "dash-iconify>=0.1", "plotly>=6.0", "pandas>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.3"]
all = ["rc-aircraft-design[viz,cad,julia,aero,webui,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rc_aircraft_design"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
