[project]
name = "rc-aircraft-design-webui"
version = "0.1.0"
description = "Comprehensive Dash web UI for RC aircraft design & analysis"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18",
    "dash-bootstrap-components>=1.6",
    "dash-iconify>=0.1",
    "plotly>=5.24",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "rc-aircraft-design",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
rc-aircraft-design = { path = "..", editable = true }
