[project]
name = "rc-aircraft-design-webui"
version = "0.1.0"
description = "Comprehensive Dash web UI for RC aircraft design & analysis"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.0",
    "dash-bootstrap-components>=2.0",
    "dash-iconify>=0.1",
    "plotly>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "rc-aircraft-design",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv.sources]
rc-aircraft-design = { path = "..", editable = true }
